--- a/style.css
+++ b/style.css
@@ -29,7 +29,9 @@ html, body {
     }
 
     ul.nav li {
+        color: #000;
         font-size: 16px;
+        line-height: 1.2em;
         border: solid black;
         border-radius: 2px;
         display: inline-block;
@@ -103,6 +105,7 @@ html, body {
         font-size: 35px; 
         margin: 30px 5px; 
         color: #000;
+        bla
     }
     .icon-instagram::before {
         content: "\e900";  
