--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ html, body {
     .nav {
         text-align: center;
     }
+    ul.nav li.active{
+        background: grey;
+    }
 
     ul.nav li {
         color: #000;
@@ -140,3 +143,15 @@ html, body {
         margin-top: 10px;
         color: #000;
     }
+
+    /* page cintact */
+    .contact{
+        background: rgb(192,192,192, 0.7);
+        border-radius:10px;
+
+    }
+    #first-name, #last-name {
+        width: 100%;
+    }
+
+
